--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,7 +1,40 @@
 img {
     width: 200px; 
+    margin-left: 43%;
 }
 
-body {
+#burger-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#header {
+    display: grid;
+    grid-template-columns: 1fr;
     text-align: center;
+}
+
+#user-input {
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+}
+
+.burger-box {
+    width: 350px;
+    height: 50px;
+    margin-left: 37%;
+    font-size: 24px;
+}
+
+.submit-btn {
+    width: 100px;
+    height: 40px;
+    margin-top: 20px;
+    margin-left: 46%;
+    border-radius: 1rem;
+    background-color: blue;
+    color: white; 
+    font-weight: bold;
 }
