--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
         {{#each burger}}
         {{#unless this.devoured}}
         <li>{{id}}. {{burger_name}}</li>
-        <button>Devour!</button>
+        <button class="devour-btn" value="{{id}}">Devour!</button>
         {{/unless}}
         {{/each}}
 
@@ -25,6 +25,8 @@
 
 <div id="user-input">
     <p>Enter a burger you want to eat and click on submit.</p>
+    <form action="/api/burger" method="POST">
     <input class="burger-box" type="text-box">
     <button class="submit-btn" type="submit">Submit</button>
+    </form>
 </div>
